# kaito

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: conductor.md  dispatch.md  integrator.md  learner.md  reviewer.md  security-reviewer.md  worker.md
.claude/commands/: create-agent.md  create-skill.md  go-issue.md  go-light.md  go.md  improve.md  review.md  rpi-implement.md  rpi-plan.md  rpi-research.md  status.md
.claude/instructions/: dispatch.md  implement.md  integrate.md  learn.md  plan.md  review.md
.claude/knowledge/: project-specific.md
.claude/output-contracts/: completion-summary.md  review-report.md  worker-report.md
.claude/personas/: conductor.md  dispatch.md  integrator.md  learner.md  reviewer-arch.md  reviewer-security.md  worker-coder.md
.claude/policies/: coding.md  communication.md  delegation.md  review.md  security.md
.claude/rules/: agent-teams.md  communication.md  infrastructure.md  workflow.md
.ensemble/: versions.json
docs/: implementation-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: crypto.rs  db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  checklists.rs  columns.rs  jira.rs  mod.rs  projects.rs  tags.rs  tasks.rs
src-tauri/src/jira/: client.rs  types.rs
src-tauri/src/models/: chat.rs  checklist.rs  column.rs  mod.rs  project.rs  tag.rs  task.rs
src-tauri/src/ollama/: client.rs  mod.rs  parser.rs  prompt.rs
src/hooks/: useColumns.ts  (+4 more)
(+40 files in other folders)
