[package]
name = "kaito-app"
version = "0.1.0"
description = "AI-powered Kanban Task Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "kaito_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

